--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,26 @@
 	      <groupId>org.apache.maven.plugins</groupId>
 	      <artifactId>maven-jar-plugin</artifactId>
 	      <version>3.1.0</version>
+
+	      <groupId>org.jacoco</groupId>
+              <artifactId>jacoco-maven-plugin</artifactId>
+              <version>0.8.3</version>
+
+	    <executions>
+              <execution>
+                 <id>prepare-agent</id>
+                 <goals>
+                 <goal>prepare-agent</goal>
+                 </goals>
+              </execution>
+
+	      <execution>
+                 <id>report</id>
+                 <phase>prepare-package</phase>
+                 <goals>
+                 <goal>report</goal>
+                 </goals>
+               </execution>
 	      <configuration>
 	        <archive>
 	          <manifest>
