--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,24 @@
                  <goals>
                  <goal>report</goal>
                  </goals>
-               </execution>
+             </execution>
+	     <execution>
+               <id>post-unit-test</id>
+               <phase>test</phase>
+               <goals>
+               <goal>report</goal>
+                </goals>
+            <configuration>
+             <!-- Sets the path to the file which contains the execution data. -->
+             <dataFile>target/jacoco.exec</dataFile>
+              <!-- Sets the output directory for the code coverage report. -->
+              <outputDirectory>target/my-reports</outputDirectory>
+            </configuration>
+            </execution>
+            </executions>
+          <configuration>
+           <destFile>target/jacoco.exec</destFile>
+            </configuration>
 	      <configuration>
 	        <archive>
 	          <manifest>
