--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
 		<sonar.host.url>http://13.49.73.180:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>Devops@2448</sonar.password>
+		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+                <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+                <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
                 <maven.compiler.target>11</maven.compiler.target>
