--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,13 @@
 		<sonar.host.url>http://13.49.73.180:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>Devops@2448</sonar.password>
-		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+		<sonar.language>java</sonar.language>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
                 <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+
+		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
                 <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+		<sonar.tests>src/test/java</sonar.tests>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
                 <maven.compiler.target>11</maven.compiler.target>
@@ -92,6 +96,11 @@
                 <destFile>target/jacoco.exec</destFile>
              </configuration>
             </plugin>
+	    <plugin>
+               <groupId>org.sonarsource.scanner.maven</groupId>
+               <artifactId>sonar-maven-plugin</artifactId>
+               <version>3.7.0.1746</version>
+           </plugin>
 	  </plugins>
 	</build>
 	
